--- a/src/index.css
+++ b/src/index.css
@@ -681,8 +681,10 @@ padding: 0;
 }
 .portfolio .portfolio-item-inner .portfolio-img img
 {
-    width: 100%;
+     width: 100%;
     display: block;
+    height: 290px;
+    object-fit: contain;
 }
 
 .contact-title
